2011-11-05  Kaz Kylheku  <kaz@kylheku.com>

	Task #11442. Access to environment variables.

	* lib.c (env_list): New static variable.
	(env): New function.
	(match): Declaration of nonexistent function removed.
	(obj_init): New variable gc-protected.

	* lib.h (env): Declared.

	* match.c (env_k): New symbol variable.
	(v_next): Implemented :env.

	* txr.1: @(next :env) described.

2011-11-04  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (ll_hash): Added a break in the case that handles
	pointer hashing of identity-equal objects. Without this, if the
	pointer size is not 4 or 8, we fall through to the next case.

2011-11-04  Kaz Kylheku  <kaz@kylheku.com>

	* txr.c (help): Change year from 2009 to 2011.

2011-11-03  Kaz Kylheku  <kaz@kylheku.com>

	* tests/008/students.txr: Use disciplined collect with :vars.

2011-11-03  Kaz Kylheku  <kaz@kylheku.com>

	* tests/008/students.txr: Regexes removed.

2011-11-02  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Added missing keywords.

2011-11-01  Kaz Kylheku  <kaz@kylheku.com>

	* genman.txr: Use filter for mapping month digits to names.
	Added comment about where to find the right man2html.

2011-11-01  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Added installation instructions.

2011-11-01  Kaz Kylheku  <kaz@kylheku.com>

	Syntax highlighting for Vim.

	* txr.vim: New file.

2011-10-30  Kaz Kylheku  <kaz@kylheku.com>

	Version 041

	Bugfixes:

	Runaway recursion in @(block) directive, introduced in 040.

	Fixed bug in matching list variable against text, at the same
	time clarifying semantics to longest-match.

	Fixed potential excessive memory use caused by refactoring in 040.

	Features:

	New :append keyword in @(output) to append instead of overwriting.

	Variable contents can be treated as input sources using :string
	and :list keywords in @(next). Variables can be treated as output
	destinations using :into keyword in @(output).

	New @(set) directive for destructive assignment to a variable.
